# Pipeline

./: .bandit  .ci_trigger_BE84  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  E2E_test_result_BUG-20260702-E69E.txt  EmailMonitor.spec  EmailMonitorFile.spec  EmailMonitorFileFolder.spec  ExcelReportApp.spec  ICPartAutomation.spec  KittingMapper.spec  KittingMapper_inspection_report.md  README.md  RELEASE_NOTES.md  RULE_WATCHER_README.md  aa88_req.json  acceptance_comment_new.md  acceptance_marker_IMP-20260613-82ED.md  acceptance_packet_body.txt  acceptance_request.json  agent_registry_audit_report.md  analyze_fails.py  analyze_packet.py  architect_rca_b985_mt27.xml  architect_report_final.xml  benchmark_v3_summary.json  benchmarker.py  build_report.xml  build_report_075a.xml  build_report_0a9e.xml  build_report_5cf4.xml  build_report_6f07.xml  build_report_A35C.xml  build_report_BE84.xml  build_report_aef0.xml  build_report_b0ab.xml  build_report_d5dc.xml  (+206 more)
.claude/: acceptance_renderer.py  codex_review_contract.md  settings.json
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.pipeline/: phase_attestation_request.json
FEAT-20260426-332E/: KittingMapper.spec  config.json  main.py
_pipeline_backup_tmp/: phase_attestation_request.json
agent-office-ext/: esbuild.js  package-lock.json  package.json  tsconfig.json
core/: __init__.py  automation_runner.py  config.json  config_manager.py  email_composer.py  encoding_utils.py  excel_handler.py  outlook_sender.py  scheduler.py  state_manager.py
docs/: pipeline_dry_run_20260615.md  (+2 more)
(+2903 files in other folders)
